crates/php-parser/tests/snapshots/nikic_expr_tests__nikic_expr_errorsuppress.snap
---
source: crates/php-parser/tests/nikic_expr_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "ErrorSuppress": {
              "kind": {
                "Variable": "a"
              },
              "span": {
                "start": 7,
                "end": 9
              }
            }
          },
          "span": {
            "start": 6,
            "end": 9
          }
        }
      },
      "span": {
        "start": 6,
        "end": 10
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 10
  }
}
