crates/php-parser/tests/snapshots/nikic_expr_tests__nikic_expr_exprinisset.snap
---
source: crates/php-parser/tests/nikic_expr_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Isset": [
              {
                "kind": {
                  "Parenthesized": {
                    "kind": {
                      "Variable": "a"
                    },
                    "span": {
                      "start": 31,
                      "end": 33
                    }
                  }
                },
                "span": {
                  "start": 30,
                  "end": 34
                }
              },
              {
                "kind": {
                  "Parenthesized": {
                    "kind": {
                      "Parenthesized": {
                        "kind": {
                          "Variable": "b"
                        },
                        "span": {
                          "start": 38,
                          "end": 40
                        }
                      }
                    },
                    "span": {
                      "start": 37,
                      "end": 41
                    }
                  }
                },
                "span": {
                  "start": 36,
                  "end": 42
                }
              }
            ]
          },
          "span": {
            "start": 24,
            "end": 43
          }
        }
      },
      "span": {
        "start": 24,
        "end": 89
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Isset": [
              {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 95,
                        "end": 96
                      }
                    },
                    "op": "Add",
                    "right": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 99,
                        "end": 100
                      }
                    }
                  }
                },
                "span": {
                  "start": 95,
                  "end": 100
                }
              }
            ]
          },
          "span": {
            "start": 89,
            "end": 101
          }
        }
      },
      "span": {
        "start": 89,
        "end": 102
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 102
  }
}
